[gd_scene load_steps=8 format=3 uid="uid://cwhb1l5vb6ggp"]

[ext_resource type="Script" path="res://Scripts/HandCards.gd" id="1_atre6"]
[ext_resource type="Texture2D" uid="uid://dy8v1ei1hlunp" path="res://Sprites/Cards.png" id="1_yshbe"]

[sub_resource type="Animation" id="Animation_s5rjq"]
resource_name = "Deselect"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CardSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(42, 13), Vector2(42, 62)]
}

[sub_resource type="Animation" id="Animation_x5dxb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CardSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(42, 62)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-1]
}

[sub_resource type="Animation" id="Animation_iriao"]
resource_name = "Select"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CardSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(42, 62), Vector2(42, 13)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c7n5o"]
_data = {
"Deselect": SubResource("Animation_s5rjq"),
"RESET": SubResource("Animation_x5dxb"),
"Select": SubResource("Animation_iriao")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jsmv2"]
size = Vector2(79, 117)

[node name="Card" type="Container"]
z_index = -1
custom_minimum_size = Vector2(80, 120)
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_atre6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_c7n5o")
}

[node name="CardSprite" type="Sprite2D" parent="."]
position = Vector2(42, 62)
scale = Vector2(2.5, 2.5)
texture = ExtResource("1_yshbe")
hframes = 8
vframes = 10

[node name="BodyCol" type="Area2D" parent="."]
position = Vector2(45, 64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyCol"]
position = Vector2(-3.5, -4.5)
shape = SubResource("RectangleShape2D_jsmv2")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="area_entered" from="BodyCol" to="." method="_on_body_col_area_entered"]
[connection signal="area_exited" from="BodyCol" to="." method="_on_body_col_area_exited"]
